@@ -3,16 +3,10 @@ package com.skydude.dacxirons.item.weapons;
 
 import com.google.common.collect.ImmutableMultimap;
 import com.google.common.collect.Multimap;
-
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
-import java.util.function.Consumer;
-
 import com.skydude.dacxirons.registries.ItemRegistries;
 import com.skydude.dacxirons.registries.dacxironsSpellRegistry;
-import com.skydude.dacxirons.renderers.CorrodingFlameItemRenderer;
+import com.skydude.dacxirons.renderers.FairyScepterItemRenderer;
+import com.skydude.dacxirons.renderers.sceptercompensationstaffRenderer;
 import io.redspace.ironsspellbooks.api.events.SpellDamageEvent;
 import io.redspace.ironsspellbooks.api.registry.AttributeRegistry;
 import io.redspace.ironsspellbooks.api.registry.SpellDataRegistryHolder;
@@ -23,11 +17,13 @@ import io.redspace.ironsspellbooks.item.weapons.StaffItem;
 import io.redspace.ironsspellbooks.util.ItemPropertiesHelper;
 import net.minecraft.client.renderer.BlockEntityWithoutLevelRenderer;
 import net.minecraft.network.chat.Component;
+import net.minecraft.world.effect.MobEffectInstance;
 import net.minecraft.world.effect.MobEffects;
 import net.minecraft.world.entity.EquipmentSlot;
 import net.minecraft.world.entity.LivingEntity;
+import net.minecraft.world.entity.ai.attributes.Attribute;
 import net.minecraft.world.entity.ai.attributes.AttributeModifier;
-import net.minecraft.world.entity.ai.attributes.AttributeModifier.Operation;
+import net.minecraft.world.entity.ai.attributes.Attributes;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemDisplayContext;
 import net.minecraft.world.item.ItemStack;
@@ -41,42 +37,41 @@ import software.bernie.geckolib.animatable.GeoItem;
 import software.bernie.geckolib.core.animatable.instance.AnimatableInstanceCache;
 import software.bernie.geckolib.core.animation.AnimatableManager;
 import software.bernie.geckolib.core.animation.AnimationController;
+import software.bernie.geckolib.core.animation.AnimationController.State;
 import software.bernie.geckolib.core.animation.AnimationState;
 import software.bernie.geckolib.core.animation.RawAnimation;
-import software.bernie.geckolib.core.animation.AnimationController.State;
 import software.bernie.geckolib.core.object.PlayState;
 import software.bernie.geckolib.util.GeckoLibUtil;
+
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+import java.util.UUID;
+import java.util.function.Consumer;
+
+
 @Mod.EventBusSubscriber
-public class CorrodingFlameItem extends StaffItem implements GeoItem, IPresetSpellContainer {
+public class FairyWandStaff extends StaffItem implements GeoItem, IPresetSpellContainer {
     private final AnimatableInstanceCache cache = GeckoLibUtil.createInstanceCache(this);
     public String animationprocedure = "empty";
     public static ItemDisplayContext transformType;
     String prevAnim = "empty";
-    public static boolean isholding;
+    public static boolean isholding = false;
     public static Player holder;
 
-    public CorrodingFlameItem() {
-        super(ItemPropertiesHelper.equipment().fireResistant().stacksTo(1).rarity(Rarity.UNCOMMON), 3, -2.4,
+
+    public FairyWandStaff() {
+        super(ItemPropertiesHelper.equipment().stacksTo(1).rarity(Rarity.UNCOMMON), 2, -2.4,
                 Map.of(
+                        AttributeRegistry.MANA_REGEN.get(),
+                        new AttributeModifier(UUID.fromString("001ad88f-901d-4691-b2a2-3664e42026d6"), "manannaa modifier", .05, AttributeModifier.Operation.MULTIPLY_BASE),
                         AttributeRegistry.NATURE_SPELL_POWER.get(),
-                        new AttributeModifier(UUID.fromString("671ad88d-901d-4691-b2a2-6767e67026d3"), " naturee", .15, Operation.MULTIPLY_BASE)
-
+                        new AttributeModifier(UUID.fromString("001ad88f-901d-4691-b2a2-3664e42026d9"), "natureee modisssfier", .1, AttributeModifier.Operation.MULTIPLY_BASE)
                 ));
-    }
-
-    public void initializeClient(Consumer<IClientItemExtensions> consumer) {
-        super.initializeClient(consumer);
-        consumer.accept(new IClientItemExtensions() {
-            private final BlockEntityWithoutLevelRenderer renderer = new CorrodingFlameItemRenderer();
-
-            public BlockEntityWithoutLevelRenderer getCustomRenderer() {
-                return this.renderer;
-            }
-        });
     }
     //spells container stuff
     private static final SpellDataRegistryHolder[] DEFAULT_SPELLS = new SpellDataRegistryHolder[]{
-            new SpellDataRegistryHolder(dacxironsSpellRegistry.ACID_BALL_SPELL, 3)
+            new SpellDataRegistryHolder(dacxironsSpellRegistry.FAIRYS_WISH_SPELL, 1)
 
     };
 
@@ -102,11 +97,29 @@ public class CorrodingFlameItem extends StaffItem implements GeoItem, IPresetSpe
     }
 
     // end of spells container stuff
+    public void initializeClient(Consumer<IClientItemExtensions> consumer) {
+        super.initializeClient(consumer);
+        consumer.accept(new IClientItemExtensions() {
+            private final BlockEntityWithoutLevelRenderer renderer = new FairyScepterItemRenderer();
+
+            public BlockEntityWithoutLevelRenderer getCustomRenderer() {
+                return this.renderer;
+            }
+        });
+    }
 
     public void getTransformType(ItemDisplayContext type) {
         transformType = type;
     }
 
+    private PlayState idlePredicate(AnimationState event) {
+        if (transformType != null && this.animationprocedure.equals("empty")) {
+            event.getController().setAnimation(RawAnimation.begin().thenLoop("idle"));
+            return PlayState.CONTINUE;
+        } else {
+            return PlayState.STOP;
+        }
+    }
 
     private PlayState procedurePredicate(AnimationState event) {
         if (transformType != null) {
@@ -133,7 +146,8 @@ public class CorrodingFlameItem extends StaffItem implements GeoItem, IPresetSpe
     public void registerControllers(AnimatableManager.ControllerRegistrar data) {
         AnimationController procedureController = new AnimationController(this, "procedureController", 0, this::procedurePredicate);
         data.add(new AnimationController[]{procedureController});
-
+        AnimationController idleController = new AnimationController(this, "idleController", 0, this::idlePredicate);
+        data.add(new AnimationController[]{idleController});
     }
 
     public AnimatableInstanceCache getAnimatableInstanceCache() {
@@ -144,20 +158,23 @@ public class CorrodingFlameItem extends StaffItem implements GeoItem, IPresetSpe
 
     public void appendHoverText(ItemStack itemstack, Level level, List<Component> list, TooltipFlag flag) {
         super.appendHoverText(itemstack, level, list, flag);
-        list.add(Component.literal("§7 Ability:"));
-        list.add(Component.literal(" §9Your Spells poison enemies"));
-
+        list.add(Component.literal("§7Ability:"));
+        list.add(Component.literal(" §9Your spells levitate enemies"));
     }
+
     @Override
     public void onInventoryTick(ItemStack stack, Level level, Player player, int slotIndex, int selectedIndex){
-        if(player.getItemBySlot(EquipmentSlot.MAINHAND).getItem() == ItemRegistries.CORRODING_FLAME_STAFF.get()){
+        if(player.getItemBySlot(EquipmentSlot.MAINHAND).getItem() == ItemRegistries.FAIRY_WAND_STAFF.get()){
             isholding = true;
             holder = player;
+           // System.out.println(isholding);
 
 
         } else {
             isholding = false;
         }
+
+
     }
     @SubscribeEvent
     public static void onSpellAttack(SpellDamageEvent event) {
@@ -179,7 +196,7 @@ public class CorrodingFlameItem extends StaffItem implements GeoItem, IPresetSpe
                             if (sLvl == null) return;
                             var real = sLvl.getEntity(holder.getUUID());         // server-side twin of holder
                             if (real instanceof net.minecraft.world.entity.LivingEntity living) {
-                                SpellAttackEffect.SpellEffectAdd(enemy, MobEffects.POISON, duration,1, false, true);
+                                SpellAttackEffect.SpellEffectAdd(enemy, MobEffects.LEVITATION, duration,1, false, true);
                             }
                         }
                 );
