@@ -25,6 +25,7 @@ All scepters/staffs are now an iron's Spells StaffItem, being able to cast any s
 Scepter of Compensation - Magic Arrow turned into a spell, Passive Ability: Attacking with spells gives you jump boost
 Pyroclastic Staff - Triple fireball turned into a spell, Passive Ability: Attacking with Fire spells gives you "flame grant me strength" & sets your enemies on fire
 Corroding Flame - Acid Fireball is now a spell, Passive ability: Attacking with spells gives your enemies poison effect
+Fairy Wand - Removed fairy missile, too generic/close to Magic Arrow. Secondary ability replaced with Fairy's Wish imbued spell, Passive Ability: your spells levitate enemies
 
 
 Balance Changes:
@@ -34,7 +35,8 @@ Bloodymancer Tunic can now be imbued with spells
 Bloody cult now has 5% blood power and 50 max mana instead of 0
 Gravedigger weapon now has +10% summon damage and 5% cooldown reduction
 Oath Weapon is now imbued with Eldritch Slash
-Corroded flame scepter now gives +10% nature instead of 5% fire and 5% nature
+Corroded flame scepter now gives +15% nature instead of 5% fire and 5% nature
+Fairy Wand now has +5% mana regen
 
 NERFS:
 Kamath armor now has only 5% instead of 15% eldritch power
